--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
     <p class="details">
       <span class="age">5yrs old</span>
     </p>
-  <p class="details">details</p>
-  <p class="restricions">*no dogs, no cats, ok with children</p>
+  <p class="details">I'm a handsome guy with an even better personality. I love to play but for the ost part I like to just hang out.</p>
+  <p class="restricions">*no dogs, no cats, ok with older children</p>
   </div> 
 </article>
   
@@ -103,7 +103,7 @@
     <p class="details">
       <span class="age">7yrs old</span>
     </p>
-  <p class="details">details</p>
+  <p class="details">I'm a sweet guy with a big heart. Making friends is my favorite thing to do. If there is a dog in need I'm your guy.</p>
   <p class="restricions">*ok with older dogs, no cats, no small children</p>
   </div> 
 </article>
@@ -115,7 +115,7 @@
     <p class="details">
       <span class="age">2yrs old</span>
     </p>
-  <p class="details">details</p>
+  <p class="details">Hello! I still have abunch of energy and I love to play hide and seek! But no worries, I won't tire you out too much. HAving someone who loves to play will be really good for me.</p>
   <p class="restricions">*no dogs, ok with cats, ok with children</p>
   </div> 
 </article>
@@ -127,7 +127,7 @@
     <p class="details">
       <span class="age">10yrs old</span>
     </p>
-   <p class="details">details</p>
+   <p class="details">I'm in my prime! I don't like to run around too much but, I sure do like a good nap. I hope you like to take naps as much as I do.</p>
    <p class="restricions">*no dogs, no cats, no children</p>
   </div> 
 </article>
@@ -139,7 +139,7 @@
     <p class="details">
       <span class="age">1yrs old</span>
     </p>
-   <p class="details">details</p>
+   <p class="details">I'm a fast little guy and I tend to be shy. But in the right home I'm sure to open up and become a great pet.</p>
    <p class="restricions">*ok with dogs, ok with cats, ok with children</p>
   </div> 
 </article>
@@ -151,7 +151,7 @@
     <p class="details">
       <span class="age">About 2yrs old</span>
     </p>
-   <p class="details">details</p>
+   <p class="details">What can I say I like it hot. Keep me warm and feed me well and I'm sure we will get along just fine.</p>
    <p class="restricions">*no dogs, no cats, ok with children</p>
   </div> 
 </article> 
@@ -170,6 +170,6 @@
     
   
  <script src="script.js"></script>
- 
+
 </body>
 </html>
