--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <p class="details">
       <span class="age">5yrs old</span>
     </p>
-  <p class="details">I'm a handsome guy with an even better personality. I love to play but for the ost part I like to just hang out.</p>
+  <p class="details">I'm a handsome guy with an even better personality. I love to play but for the most part I like to just hang out.</p>
   <br></br>
   <p class="restricions">*no dogs, no cats, ok with older children</p>
   </div> 
@@ -117,7 +117,7 @@
     <p class="details">
       <span class="age">2yrs old</span>
     </p>
-  <p class="details">Hello! I still have abunch of energy and I love to play hide and seek! But no worries, I won't tire you out too much. HAving someone who loves to play will be really good for me.</p>
+  <p class="details">Hello! I still have a bunch of energy and I love to play hide and seek! But no worries, I won't tire you out too much. Having someone who loves to play will be really good for me.</p>
   <br></br>
   <p class="restricions">*no dogs, ok with cats, ok with children</p>
   </div> 
@@ -130,7 +130,7 @@
     <p class="details">
       <span class="age">10yrs old</span>
     </p>
-   <p class="details">I'm in my prime! I don't like to run around too much but, I sure do like a good nap. I hope you like to take naps as much as I do.</p>
+   <p class="details">I'm in my prime! I don't like to run around too much but I sure do like a good nap. I hope you like to take naps as much as I do.</p>
    <br></br>
    <p class="restricions">*no dogs, no cats, no children</p>
   </div> 
